syntax = "proto3";

package proto;

option java_package = "com.hedera.pbj.test.proto.java";
option java_multiple_files = true;
// <<<pbj.java_package = "com.hedera.pbj.test.proto.pbj">>> This comment is special code for setting PBJ Compiler java package

import "timestampTest.proto";
import "google/protobuf/wrappers.proto";
import "everything.proto";

// <<<pbj.comparable = "num" >>>
message ComparableSubObj {
  int32 num = 1;
}

// <<<pbj.comparable = "int32Number, doubleNumber, booleanField, text, comparableEnum, subObject, bytes" >>>
message ComparableTest {
  int32 int32Number = 1;
  double doubleNumber = 2;
  bool booleanField = 3;
  string text = 4;
  ComparableEnum comparableEnum = 5;
  ComparableSubObj subObject = 6;
  bytes bytes = 7;
}

// <<<pbj.comparable = "oneofExample" >>>
message ComparableOneOfTest {
  oneof oneofExample {
    string text1OneOf = 10;
    string text2OneOf = 11;
    ComparableSubObj subObject = 12;
  }
}

enum ComparableEnum {
  UNSPECIFIED = 0;
  ONE = 1;
  TWO = 2;
  THREE = 3;
}


/**
 * Example of a message with a limited set of fields that are comparable.
 */
// <<<pbj.comparable = "int32Number, text, subObject" >>>
message LimitedComparableTest {
  int32 int32Number = 1;
  int64 int64Number = 2;
  bool booleanField = 3;
  string text = 4;
  ComparableEnum comparableEnum = 5;
  ComparableSubObj subObject = 6;
}

// <<<pbj.comparable = "int32Number" >>>
message LimitedComparableTestWithOneOf {
  int32 int32Number = 1;
  oneof oneOfExample {
    string oneOfText = 10;
    ComparableSubObj oneOfSubObject = 12;
  }

}
